
4.67  2014-01-08
  - Added history and max_history_size attributes to Mojo::Log.
  - Improved exception and not found pages with log messages.
  - Improved exception page with more information.
  - Improved not found page with a more generic message.

4.66  2014-01-04
  - Added success attribute to Test::Mojo.
  - Improved Mojo::DOM::CSS and Mojo::DOM::HTML performance.
  - Fixed XML detection bug in Mojo::DOM.
  - Fixed escaping bugs in Mojo::DOM::CSS.

4.65  2014-01-02
  - Deprecated use of hash references for optgroup generation with
    select_field helper in favor of Mojo::Collection objects.
  - Added b and c helpers to Mojolicious::Plugin::DefaultHelpers.
  - Fixed reference handling bug in Mojo::Collection.

4.64  2014-01-01
  - Fixed helper export bug in Mojolicious::Plugin::EPRenderer.

4.63  2013-12-19
  - Deprecated Mojolicious::secret in favor of Mojolicious::secrets.
  - Added support for rotating secrets.
  - Added secrets method to Mojolicious.

4.62  2013-12-17
  - Deprecated Mojo::URL::to_rel.

4.61  2013-12-16
  - Added select_one method to Mojo::DOM::CSS.
  - Improved performance of Mojo::DOM::at significantly.

4.60  2013-12-11
  - Improved Mojolicious::Validator::Validation to allow custom validation
    errors.

4.59  2013-12-04
  - Added CSRF protection support.
  - Added support for permessage-deflate WebSocket compression.
  - Added csrf_protect method to Mojolicious::Validator::Validation.
  - Added build_message method to Mojo::Transaction::WebSocket.
  - Added csrf_token attribute to Mojolicious::Validator::Validation.
  - Added compressed and context_takeover attributes to
    Mojo::Transaction::WebSocket.
  - Added csrf_token helper to Mojolicious::Plugin::DefaultHelpers.
  - Added csrf_field helper to Mojolicious::Plugin::TagHelpers.
  - Removed deprecated mode specific methods in application class.
  - Relicensed all artwork to CC-SA version 4.0.

4.58  2013-11-19