@@ -4,6 +4,7 @@
   - Improved exception and not found pages with log messages.
   - Improved exception page with more information.
   - Improved not found page with a more generic message.
+  - Improved inline templates to use their checksum as name.
 
 4.66  2014-01-04
   - Added success attribute to Test::Mojo.
